@@ -1,3 +1,9 @@
+2009-02-10  Ross Burton  <ross@linux.intel.com>
+
+	* src/sj-main.c:
+	Free the option context once we're done with it (#569008) and
+	rearrange startup a bit.
+
 2009-02-09  Ross Burton  <ross@linux.intel.com>
 
 	* src/sj-main.c:
